# dropboxgui

./: LICENSE  Utils.vala  meson.build
data/: com.github.rbribeiro.dropboxgui.appdata.xml  com.github.rbribeiro.dropboxgui.desktop  com.github.rbribeiro.dropboxgui.desktop~  com.valacounterapp.appdata.xml  gschema.xml  gschema.xml~
glade/: #share_view.glade#  main_window.glade  main_window.glade~
src/: Application.vala  Application.vala~  Utils.vala
src/Services/: Dropbox.vala
src/Views/: FavView.vala  MainWindowView.vala  MainWindowView.vala~  SettingsDropboxView.vala  SettingsPreferencesView.vala  SettingsPreferencesView.vala~  SettingsView.vala  ShareView.vala
src/Widgets/: StatusBar.vala
src/Windows/: SettingsWindow.vala
